tests/rosetta/out/Smalltalk/arithmetic-derivative.out
/tmp/arithmetic-derivative.st:6: parse error, expected ']'
