tests/rosetta/out/Smalltalk/arithmetic-derivative.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| D c d exp factors g i j line m main n p pad pow primeFactors repeat res s vals x |
primeFactors := [:n | factors := {}.
x := n.
[((x % 2) = 0)] whileTrue: [
  factors := factors copyWith: 2.
  x := (x / 2) asInteger.
]
.
p := 3.
[((p * p) <= x)] whileTrue: [
  [((x % p) = 0)] whileTrue: [
    factors := factors copyWith: p.
    x := (x / p) asInteger.
  ]
  .
  p := (p + 2).
]
.
((x > 1)) ifTrue: [
  factors := factors copyWith: x.
] .
factors ].
repeat := [:ch :n | s := ''.
i := 0.
[(i < n)] whileTrue: [
  s := (s + ch).
  i := (i + 1).
]
.
s ].
D := [:n | ((n < 0)) ifTrue: [
  -D value: -n
] .
((n < 2)) ifTrue: [
  0
] .
factors := {}.
((n < 1e+19)) ifTrue: [
  factors := primeFactors value: n asInteger.
] ifFalse: [
  g := (n / 100) asInteger.
  factors := primeFactors value: g.
  factors := factors copyWith: 2.
  factors := factors copyWith: 2.
  factors := factors copyWith: 5.
  factors := factors copyWith: 5.
].
c := (factors size).
((c = 1)) ifTrue: [
  1
] .
((c = 2)) ifTrue: [
  (factors at: 0 + factors at: 1) asFloat
] .
d := (n / factors at: 0 asFloat).
((D value: d * factors at: 0 asFloat) + d) ].
pad := [:n | s := (n asString).
[((s size) < 4)] whileTrue: [
  s := (' ' + s).
]
.
s ].
main := [ | vals := {}.
n := -99.
[(n < 101)] whileTrue: [
  vals := vals copyWith: D value: n asFloat asInteger.
  n := (n + 1).
]
.
i := 0.
[(i < (vals size))] whileTrue: [
  line := ''.
  j := 0.
  [(j < 10)] whileTrue: [
    line := (line + pad value: vals at: (i + j)).
    ((j < 9)) ifTrue: [
      line := (line + ' ').
    ] .
    j := (j + 1).
  ]
  .
  Transcript show: (line) printString; cr.
  i := (i + 10).
]
.
pow := 1.
m := 1.
[(m < 21)] whileTrue: [
  pow := (pow * 10).
  exp := (m asString).
  (((exp size) < 2)) ifTrue: [
    exp := (exp + ' ').
  ] .
  res := ((m asString) + repeat value: '0' value: (m - 1)).
  Transcript show: (((('D(10^' + exp) + ') / 7 = ') + res)) printString; cr.
  m := (m + 1).
]
. ].
main value.
